# artpark-datasets-mcp

./: .env.example  .gitignore  .gitmodules  CAPABILITIES_REPORT.md  Dockerfile  Makefile  README.md  artpark_server.py  docker-compose.yml  pyproject.toml  requirements.txt
.cursor/: mcp.json
.cursor/rules/: artpark-mcp.mdc
artpark/: client.py
examples/: 01_cross_dataset_reasoning.md  02_temporal_narrative.md  03_hidden_patterns.md  04_policy_intelligence.md  README.md
examples/Complex/: 04_one_health_hypothesis.md  05_covid_damage_forensics.md  06_needle_in_haystack.md  07_myth_debunker.md  08_risk_model.md  EXECUTIVE_SUMMARY.md  README.md  ideas.md
observability/: telemetry.py
tests/: test_client.py  test_server.py
